v1.04
    - Fixed bug where missing gameflavor from curseforge was causing errors when trying to update
    - Fixed bug where having a version of java 1.8-1.11 would cause the auto-updater to incorrectly use the installed version of java instead of the bundled one (failing to properly update)

v1.03
    - Fixed bug where selecting install location manually would lead to addons being installed in the wrong subfolder
    - Fixed bug where addons with certain special characters in their name would not properly install
    - Changed the system for downloading files, should be faster and hopefully deals with failed downloads and abnormal HTTP/IO problems more cleanly
    - Fixed a bug where API reseponses from Curseforge with no "gameflavor" specification were causing failed update checking
    - Updated the DataCollectionException and Log functionality to properly present all relevant information in case of exceptions
    - Updated the auto-conversion that figures out projectIDs based on URLS. Performs a progressive search now, leading to much better odds of detecting the right projectID
    - Fixed a bug where a missing downloads folder would cause a FileNotFoundException
    - Added a Chrome based User-Agent to HTMLUnit

v1.00
    - Fixed issue with manual install location selection
    - Made the program check for existing Java installations of version 8 or higher

v0.99
    - Overhauled UI totally
    - You can now search for Tukui, WowInterface, and Curse addons in the same view
    - Added extra settings, such as scrolling to bottom of list when updating and auto-searching for updates on launch
    - You can now update addons individually, simply check for updates and each one with an update will show a button
    - Hopefully fixed the bug with setting up installation folders on another drive

v0.9
    - Added support for Retail and PTR for both versions of the game, with ability  to easily expand to TBC or any other versions of the game if/when they launch